--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -5,9 +5,23 @@
         <title>Rango</title>
     </head>
     <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
+        <h1>Rango says... hello world!</h1>
+        {% if categories %}
+        <ul>
+            {% for category in categories %}
+            <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+        {% if most_views_pages %}
+        <ul>
+            {% for page in most_views_pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <a href="/rango/about/">About</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
     </body>
 </html>
