Unfinished work, bad day

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -8,6 +8,6 @@
         <h1>You need to know Rango?</h1>
         hello I am Rango!<br />
         <img src="/media/rango.jpg" alt="Picture of Rango" />
-        <a href="/rango/">About</a><br />
+        <a href="/rango/">Index</a><br />
     </body>
 </html>
