--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -24,5 +24,6 @@
         {% endif %}
         <a href="/rango/about/">About</a><br />
         <a href="/rango/add_category/">Add a New Category</a><br />
+        <a href="/rango/register/">Register Here</a>
     </body>
 </html>
