--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -15,7 +15,9 @@
             {% else %}
                 <strong>No pages currently in category.</strong>
             {% endif %}
-            <a href="/rango/category/{{ category_name_slug }}/add_page/">Add page</a>
+            {% if user.is_authenticated %}
+                <a href="/rango/category/{{ category_name_slug }}/add_page/">Add page</a>
+            {% endif %}
         {% else %}
             The specified category {{ category_name }} does not exist!
         {% endif %}
