--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -5,7 +5,11 @@
         <title>Rango</title>
     </head>
     <body>
+        {% if user.is_authenticated %}
+        <h1>Rango says... hello {{ user.username }}!</h1>
+        {% else %}
         <h1>Rango says... hello world!</h1>
+        {% endif %}
         {% if categories %}
         <ul>
             {% for category in categories %}
@@ -22,8 +26,14 @@
             {% endfor %}
         </ul>
         {% endif %}
-        <a href="/rango/about/">About</a><br />
+        {% if user.is_authenticated %}
         <a href="/rango/add_category/">Add a New Category</a><br />
-        <a href="/rango/register/">Register Here</a>
+        <a href="/rango/restricted/">Restricted Page</a><br />
+        <a href="/rango/logout/">Logout</a><br />
+        {% else %}
+        <a href="/rango/register/">Register Here</a><br />
+        <a href="/rango/login/">Login</a><br />
+        {% endif %}
+        <a href="/rango/about/">About</a><br />
     </body>
 </html>
