--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>You need to know Rango?</h1>
-        hello I am Rango!<br />
-        <img src="/media/rango.jpg" alt="Picture of Rango" />
-        <a href="/rango/">Index</a><br />
-    </body>
-</html>
+{% block title %}About{% endblock %}
+{% block body_block %}
+    <h1>You need to know Rango?</h1>
+    hello I am Rango!<br />
+    <img src="/media/rango.jpg" alt="Picture of Rango" />
+{% endblock %}
