--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>{{ category_name }}</h1>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title %}{{ category_name }}{% endblock %}
+{% block body_block %}
+    <h1>{{ category_name }}</h1>
         {% if category %}
             {% if pages %}
             <ul>
@@ -16,10 +14,9 @@
                 <strong>No pages currently in category.</strong>
             {% endif %}
             {% if user.is_authenticated %}
-                <a href="/rango/category/{{ category_name_slug }}/add_page/">Add page</a>
+                <a href="{% url 'add_page' category_name_slug %}">Add page!</a>
             {% endif %}
         {% else %}
             The specified category {{ category_name }} does not exist!
         {% endif %}
-    </body>
-</html>
+{% endblock %}
