--- a/tango_with_django_project/templates/rango/login.html
+++ b/tango_with_django_project/templates/rango/login.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <!-- Is anyone getting tired of repeatedly entering the header over
-        and over?? Answere: Yes!!! when we split the templates!!! xD -->
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Login to Rango</h1>
-        <form id="login_form" method="post" action="/rango/login/">
+{% extends 'rango/base.html' %}
+{% block title %}Login{% endblock %}
+{% block body_block %}
+    <h1>Login to Rango</h1>
+        <form id="login_form" method="post" action="{% url 'login' %}">
             {% csrf_token %}
             Username: <input type="text" name="username" value="" size="50" />
             <br />
@@ -15,5 +10,4 @@
             <br />
             <input type="submit" value="submit" />
         </form>
-    </body>
-</html>
+{% endblock %}
