Playing with sessions and cookies

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -5,4 +5,5 @@
     <h1>You need to know Rango?</h1>
     hello I am Rango!<br />
     <img src="/media/rango.jpg" alt="Picture of Rango" />
+    <p>Hey!!! this is your visits number {{ visits }}</p>
 {% endblock %}
