--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -2,8 +2,12 @@
 {% load staticfiles %}
 {% block title %}About{% endblock %}
 {% block body_block %}
+<div class="page-header">
     <h1>You need to know Rango?</h1>
-    hello I am Rango!<br />
+</div>
+<div>
+    <p>hello I am Rango!</p>
     <img src="/media/rango.jpg" alt="Picture of Rango" />
     <p>Hey!!! this is your visits number {{ visits }}</p>
+</div>
 {% endblock %}
