--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,8 +1,11 @@
 {% extends 'rango/base.html' %}
 {% block title %}Add a Category{% endblock %}
 {% block body_block %}
+<div class="page-header">
     <h1>Add a Category</h1>
-    <form id="category_form" method="post" action="{% url 'add_category' %}">
+</div>
+    <form role="form" id="category_form" method="post" action="{% url 'add_category' %}">
+        <h2 class="form-signin-heading">Add a category</h2>
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
@@ -12,6 +15,6 @@
             {{ field.help_text }}
             {{ field }}
         {% endfor %}
-        <input type="submit" name="submit" value="Create Category" />
+        <button class="btn btn-primary" type="submit" name="submit"/>Add Categoty</button>
     </form>
 {% endblock %}
