--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -2,7 +2,9 @@
 {% load staticfiles %}
 {% block title %}{{ category_name }}{% endblock %}
 {% block body_block %}
+<div class="page-header">
     <h1>{{ category_name }}</h1>
+</div>
         {% if category %}
             {% if pages %}
             <ul>
