--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,25 +1,43 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block body_block %}
-        {% if user.is_authenticated %}
-        <h1>Rango says... hello {{ user.username }}!</h1>
-        {% else %}
-        <h1>Rango says... hello world!</h1>
-        {% endif %}
+<div class="page-header">
+    {% if user.is_authenticated %}
+    <h1>Rango says... hello {{ user.username }}!</h1>
+    {% else %}
+    <h1>Rango says... hello world!</h1>
+    {% endif %}
+</div>
+<div class="row placeholders">
+    <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Categories</h3>
+            </div>
+        </div>
         {% if categories %}
-        <ul>
-            {% for category in categories %}
-            <li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
-            {% endfor %}
+        <ul class="list-group">
+        {% for category in categories %}
+            <li class="list-group-item"><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
+        {% endfor %}
         </ul>
         {% else %}
-            <strong>There are no categories present.</strong>
+        <strong>There are no categories present.</strong>
         {% endif %}
+    </div>
+    <div class="col-xs-12 col-sm-6 placeholder">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Pages</h3>
+            </div>
+        </div>
         {% if most_views_pages %}
-        <ul>
-            {% for page in most_views_pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
+        <ul class="list-group">
+        {% for page in most_views_pages %}
+            <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
         </ul>
         {% endif %}
+    </div>
+</div>
 {% endblock %}
