--- a/tango_with_django_project/templates/registration/logout.html
+++ b/tango_with_django_project/templates/registration/logout.html
@@ -1,5 +1,7 @@
 {% extends "rango/base.html" %}
 {% block body_block %}
-<h1>Logged Out</h1>
+<div class="page-header">
+    <h1>Logged Out</h1>
+</div>
 <p>You are now logged out.</p>
 {% endblock %}
