--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -9,7 +9,12 @@
             {% if pages %}
             <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                <li><a href="{% url 'goto' %}?page_id={{ page.id }}">{{ page.title }}</a></li>
+                    {% if page.views > 1 %}
+                        ({{ page.views }} views)
+                    {% elif page.views == 1 %}
+                        ({{ page.views }} view)
+                    {% endif %}
                 {% endfor %}
             </ul>
             {% else %}
