--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -18,7 +18,13 @@
         {% if categories %}
         <ul class="list-group">
         {% for category in categories %}
-            <li class="list-group-item"><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
+            <li class="list-group-item"><a href="{% url 'category' category.slug %}">{{ category.name }}</a>
+            {% if category.views > 1 %}
+            ({{ category.views }} views)
+            {% elif category.views == 1 %}
+            ({{ category.views }} view)
+            {% endif %}
+            </li>
         {% endfor %}
         </ul>
         {% else %}
