Playing with JQuery

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -6,8 +6,13 @@
     <h1>You need to know Rango?</h1>
 </div>
 <div>
-    <p>hello I am Rango!</p>
+    <p class="ouch">hello I am Rango!</p>
     <img src="/media/rango.jpg" alt="Picture of Rango" />
     <p>Hey!!! this is your visits number {{ visits }}</p>
+    <button onClick="alert('You clicked the button using Javascript.');">
+        Clicke Me - I run Javascript
+    </button>
+    <button id="about-btn"> Click Me - I'm Javascript on Speed</button>
+    <div id="msg">Hello</div>
 </div>
 {% endblock %}
