Start working with the like a category

--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -5,6 +5,16 @@
 <div class="page-header">
     <h1>{{ category_name }}</h1>
 </div>
+<p>
+    <strong id="like_count">{{ category.likes }}</strong> people like this category
+
+    {% if user.is_authenticated %}
+        <button id="likes" data-catid="{{ category.id }}" class="btn btn-primary" type="button">
+        <span class="glyphicon glyphicon-thumbs-up"></span>
+        Like
+        </button>
+    {% endif %}
+</p>
         {% if category %}
             {% if pages %}
             <ul>
