--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -19,7 +19,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{% static 'js/rango-jquery.js' %}"></script>
+    <!-- <script src="{% static 'js/rango-jquery.js' %}"></script> -->
     <script src="{% static 'js/rango-ajax.js' %}"></script>
   </head>
 
